# Qt-FSAE-Telemetry

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  parse.cpp  parse.h  serial.cpp  serial.h
